[project]
name = "llms-txt"
version = "0.1.0"
description = "Docs for LLMs"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
dependencies = [
    "aiofiles>=24.1.0",
    "beanie>=1.27.0",
    "beautifulsoup4>=4.12.3",
    "bs4>=0.0.2",
    "frontmatter>=3.0.8",
    "httpx>=0.27.2",
    "markdownify>=0.13.1",
    "motor>=3.5.1",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "python-frontmatter>=1.1.0",
    "pyyaml>=5.1",
    "gitpython>=3.1.43",
    "markdown>=3.7",
    "jinja2>=3.1.4",
    "pygments>=2.18.0",
    "aiohttp>=3.11.2",
    "sphinx>=8.1.3",
    "tomli>=2.1.0",
]

[dependency-groups]
dev = ["mypy>=1.13.0", "ruff>=0.7.3"]

[tool.hatch.build.targets.wheel]
packages = ["src/llms_txt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
docs = "llms_txt.main:main"
publish = "llms_txt.publish:main"
